added error messages to test if library directory was created